--- a/Vouched/res/layout/view_profile.xml
+++ b/Vouched/res/layout/view_profile.xml
@@ -87,7 +87,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="0"
+                android:text="0X"
                 android:textColor="#669900"
                 android:textSize="16dp" />
         </LinearLayout>
@@ -112,7 +112,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="0"
+                android:text="0X"
                 android:textColor="#669900"
                 android:textSize="16dp" />
         </LinearLayout>
