--- a/Vouched/res/layout/fragment_community.xml
+++ b/Vouched/res/layout/fragment_community.xml
@@ -1,21 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    
-    <TextView
-        android:id="@+id/txtLabel"
-         android:layout_width="wrap_content"
+    android:layout_height="match_parent" >
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:textSize="16dp"
-        android:text="Leaderboards"/>
-    
-    <ImageView android:layout_width="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:background="#626060"
+        android:text="TOTAL VOUCH SCORE"
+        android:textColor="@android:color/white" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/txtLabel"
-        android:src="@drawable/ic_communities"
+        android:layout_alignLeft="@+id/button3"
+        android:layout_below="@+id/button3"
+        android:background="#767474"
+        android:text="Communication"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="5dp" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button5"
+        android:layout_below="@+id/button5"
+        android:background="#767474"
+        android:text="Productivity"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="5dp" />
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button6"
+        android:layout_below="@+id/button6"
+        android:background="#767474"
+        android:text="Adaptability"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="5dp" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button1"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"/>    
+        android:background="#767474"
+        android:text="Professionalism"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="5dp" />
+
+    <Button
+        android:id="@+id/button8"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/button7"
+        android:layout_below="@+id/button7"
+        android:background="#767474"
+        android:text="Leadership"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="5dp" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button2"
+        android:layout_below="@+id/button2"
+        android:background="#767474"
+        android:text="Integrity"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="5dp" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button4"
+        android:layout_below="@+id/button4"
+        android:background="#767474"
+        android:text="Innovation"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="5dp" />
+
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/button8"
+        android:layout_below="@+id/button8"
+        android:background="#767474"
+        android:text="Teamwork"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="5dp" />
 
 </RelativeLayout>
