--- a/Vouched/res/layout/fragment_dashboard.xml
+++ b/Vouched/res/layout/fragment_dashboard.xml
@@ -49,9 +49,10 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="25dp"
                 android:layout_marginTop="10dp"
-                android:orientation="horizontal" >
+                android:orientation="horizontal"
+                android:layout_gravity="" >
 
                 <LinearLayout
                     android:id="@+id/about_vs"
@@ -158,7 +159,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/linearLayout1"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="25dp"
             android:layout_marginTop="10dp"
             android:text="VOUCHED REPUTATION"
             android:textColor="#669900"
