--- a/Vouched/res/layout-sw600dp/fragment_dashboard.xml
+++ b/Vouched/res/layout-sw600dp/fragment_dashboard.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/linearLayout2"
             android:layout_below="@+id/linearLayout1"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal"
             android:layout_marginLeft="40dp" >
 
@@ -514,6 +514,17 @@
             android:textSize="22dp"
             android:layout_toRightOf="@+id/blank_team"
             android:text="100" />
+
+        <Button
+            android:id="@+id/fb"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignRight="@+id/label_team"
+            android:layout_below="@+id/label_team"
+            android:layout_marginTop="25dp"
+            android:text=""
+            android:background="@drawable/facebook" />
+
     </RelativeLayout>
 
 </FrameLayout>
